--- a/src/styles/Funcionario.css
+++ b/src/styles/Funcionario.css
@@ -1,55 +1,52 @@
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-  }
-  
-  html, body {
-    font-family: Arial, sans-serif;
-    height: 100%;
-    width: 100%;
-    overflow: hidden;
-  }
-  
-  .app {
+}
+
+.app {
     display: flex;
     flex-direction: column;
     height: 100vh;
-    width: 100vw; 
-    background-color: black;
-  }
-  
-  .header, .footer {
+    width: 100vw;
+    background-color: white;
+}
+
+.header {
     background-color: #3f1a84;
     color: white;
+    position: relative;
+    padding: 10px 0;
     text-align: center;
-    padding: 10px;
-  }
-  
-  .header h1 {
+}
+
+.title {
     font-size: 20px;
     margin: 0;
-  }
-  
-  .content {
+    line-height: 1.5;
+}
+
+
+.content {
     flex: 1;
     display: flex;
     justify-content: center;
     align-items: center;
     background-color: white;
-  }
-  
-  .buttons {
+}
+
+.buttons {
     display: flex;
-    gap: 30px;
-  }
-  
-  .button {
+    gap: 20px;
+}
+
+.button {
     background-color: #f0f0f0;
     border: 1px solid #ccc;
     border-radius: 8px;
-    width: 200px;
-    height: 200px;
+    width: 100px;
+    height: 100px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -60,18 +57,22 @@
     font-size: 14px;
     padding: 10px;
     transition: background-color 0.3s;
-  }
-  
-  .button:hover {
+}
+
+.button:hover {
     background-color: #e0e0e0;
-  }
-  
-  .icon {
-    font-size: 80px;
+}
+
+.icon {
+    font-size: 40px;
     margin-bottom: 5px;
-  }
-  
-  .footer {
+}
+
+
+.footer {
+    background-color: #3f1a84;
+    color: white;
+    text-align: center;
+    padding: 10px;
     font-size: 12px;
-  }
-  
+}
