--- a/src/styles/Historico.css
+++ b/src/styles/Historico.css
@@ -1,54 +1,53 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
-  
-  .container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-color: lightgray;
-    width: 100%;
-    height: calc(100vh - 90px);
-  }
-  
-  .container-historico {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    background-color: #fff;
-    width: calc(100% - 40px);
-    height: calc(100vh - 100px);
-    margin: 20px;
-    padding: 20px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    border-radius: 10px;
-  }
-  
-  .container-historico h2 {
-    font-size: 24px;
-    color: #333;
-    margin-bottom: 20px;
-  }
-  
-  .historico-area {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: flex-start;
-    background-color: #f9f9f9;
-    width: 100%;
-    height: 100%;
-    border: 1px solid #ddd;
-    border-radius: 8px;
-    padding: 20px;
-    overflow-y: auto;
-  }
-  
-  .historico-area p {
-    color: #666;
-    font-size: 16px;
-  }
-  
+.container-view-historico {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: #fff;
+  width: calc(100% - 40px);
+  height: calc(100vh - 100px);
+  margin: 20px;
+  padding: 20px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.container-historico {
+  display: flex;
+  flex-direction: column;
+  background-color: #f9f9f9;
+  width: 100%;
+  height: 100%;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  padding: 20px;
+  overflow-y: auto;
+}
+
+.container-historico p {
+  color: #666;
+  font-size: 16px;
+}
+
+.lista-historico {
+  display: flex;
+  flex-direction: column;
+  list-style-type: none;
+  width: 100%;
+  gap: 10px;
+}
+
+.historico {
+  display: flex;
+  flex-direction: column;
+  border-bottom: 1px solid #ccc;
+  width: 100%;
+  gap: 5px;
+}
+
+.container-info {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
