--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -15,10 +15,13 @@
 
 .container-view {
   display: flex;
+  flex-direction: row;
   align-items: center;
   justify-content: center;
   background-color: #fff;
-  width: calc(100% - 20px);
+  width: calc(100% - 40px);
   height: calc(100vh - 90px);
-  margin: 10px;
+  margin: 20px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
 }
