--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -2,8 +2,10 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #3f1a84;
+    background-color: darkblue;
     color: #fff;
     width: 100%;
     height: 40px;
+    font-size: 16px;
+    font-family: Arial, Helvetica, sans-serif;
 }
