--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -2,7 +2,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #3f1a84;
+    background-color: darkblue;
     width: 100%;
     height: 50px;
 }
@@ -26,7 +26,7 @@
 
 .btnVoltar p {
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 22px;
+    font-size: 18px;
     color: #fff;
     margin-left: 5px;
 }
