--- a/src/styles/ListaFuncionarios.css
+++ b/src/styles/ListaFuncionarios.css
@@ -1,19 +1,4 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-.container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  background-color: lightgray;
-  width: 100%;
-  height: calc(100vh - 90px);
-}
-
-.container-historico {
+.container-view-funcionarios {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -25,19 +10,12 @@
   padding: 20px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   border-radius: 10px;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
-.container-historico h2 {
-  font-size: 24px;
-  color: #333;
-  margin-bottom: 20px;
-}
-
-.historico-area {
+.container-funcionarios {
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
-  align-items: flex-start;
   background-color: #f9f9f9;
   width: 100%;
   height: 100%;
@@ -47,12 +25,12 @@
   overflow-y: auto;
 }
 
-.historico-area p {
+.container-view-funcionarios p {
   color: #666;
   font-size: 16px;
 }
 
-.lista-epis {
+.lista-funcionarios {
   display: flex;
   flex-direction: column;
   list-style-type: none;
@@ -60,15 +38,9 @@
   gap: 10px;
 }
 
-.foto-epi {
-  width: 100px;
-  height: 100px;
-  margin-bottom: 10px;
-}
-
-.epi-item {
+.funcionario {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   border-bottom: 1px solid #ccc;
   width: 100%;
   gap: 5px;
