--- a/src/styles/ListaEpis.css
+++ b/src/styles/ListaEpis.css
@@ -47,13 +47,66 @@
 .epi-item {
   display: flex;
   flex-direction: row;
+  justify-content: space-between;
   border-bottom: 1px solid #ccc;
   width: 100%;
   gap: 5px;
+}
+
+.container-descricao {
+  display: flex;
+  flex-direction: row;
 }
 
 .container-info {
   display: flex;
   flex-direction: column;
   gap: 5px;
+}
+
+.container-botao {
+  display: flex;
+  flex-direction: row;
+  gap: 5px;
+}
+
+.container-botao a {
+  text-decoration: none;
+}
+
+.btnRetirar {
+  text-align: center;
+  width: 100px;
+  /* padding: 10px; */
+  font-size: 16px;
+  color: #fff;
+  background-color: dodgerblue;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+.btnDevolver {
+  text-align: center;
+  width: 100px;
+  /* padding: 10px; */
+  font-size: 16px;
+  color: #fff;
+  background-color: #28a745;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+.container-editar {
+  display: flex;
+  flex-direction: row;
+  gap: 5px;
+}
+
+.container-editar a {
+  color: #666;
+  text-decoration: none;
 }
