--- a/src/styles/DevolverEpi.css
+++ b/src/styles/DevolverEpi.css
@@ -1,50 +1,42 @@
-.container-form-editar {
+.container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: #f0f0f0;
+    width: 100%;
+    height: calc(100vh - 90px);
+}
+
+.container-form {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     background-color: #fff;
     width: 400px;
-    height: calc(100% - 120px);
+    height: 300px;
     border: 1px solid #ccc;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
-
-.container-titulo {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    height: 40px;
-    padding: 50px;
-    border-bottom: 1px solid #ccc;
-}
-
-.container-form-editar h2 {
+.container-form h2 {
     font-size: 18px;
     font-family: Arial, Helvetica, sans-serif;
-    color: #000000;
-}
-
-.container-form-centro {
+    color: #333;
+    margin-bottom: 15px;
     display: flex;
-    flex-direction: column;
-    align-items: center;
     justify-content: center;
-    width: 100%;
-    height: 100%;
-    gap: 40px;
+    align-items: center;
 }
-
-.form-editar {
+.container .container-form .form {
     display: flex;
     flex-direction: column;
     width: calc(100% - 80px);
     gap: 15px;
 }
 
-.form-editar input {
+.container .container-form .form input {
     width: 100%;
     padding: 10px;
     font-size: 14px;
@@ -52,8 +44,8 @@
     border-radius: 4px;
 }
 
-.btnEditar {
-    width: calc(100% - 80px);
+.container .container-form .form .btnCadastrar {
+    width: 100%;
     padding: 10px;
     font-size: 16px;
     color: #fff;
@@ -62,8 +54,5 @@
     border-radius: 4px;
     cursor: pointer;
     transition: 0.3s;
-}
-
-.btnEditar:hover {
     background-color: #218838;
 }
