--- a/src/styles/Historico.css
+++ b/src/styles/Historico.css
@@ -23,6 +23,8 @@
   border-radius: 8px;
   padding: 20px;
   overflow-y: auto;
+  padding: 20px;
+  
 }
 
 .container-historico p {
@@ -43,7 +45,8 @@
   flex-direction: column;
   border-bottom: 1px solid #ccc;
   width: 100%;
-  gap: 5px;
+  gap: 8px;
+  padding: 15px;
 }
 
 .container-info {
