--- a/src/styles/ListaFuncionarios.css
+++ b/src/styles/ListaFuncionarios.css
@@ -40,14 +40,112 @@
 
 .funcionario {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  justify-content: space-between;
   border-bottom: 1px solid #ccc;
   width: 100%;
   gap: 5px;
 }
 
-.container-info {
+.container-info-funcionario {
+  margin-bottom: 10px;
+}
+
+.validar-cpf {
+  font-family: Arial, Helvetica, sans-serif;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #fff;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  padding: 20px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  z-index: 1000;
+}
+
+.validar-cpf h3 {
+  font-size: 16PX;
+  margin-bottom: 15px;
+}
+
+.validar-cpf input {
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 15px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+.validar-cpf button {
+  padding: 10px 15px;
+  margin-right: 10px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.validar-cpf button:hover {
+  background-color: #ccc;
+}
+
+.container-aviso {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+.container-campo-aviso {
   display: flex;
   flex-direction: column;
-  gap: 5px;
+  background-color: white;
+  padding: 20px;
+  border-radius: 10px;
+  text-align: center;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+  gap: 20px;
+}
+
+.container-campo-aviso h3 {
+  margin-bottom: 20px;
+}
+
+.container-validar-cpf {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.container-botao {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
+.container-campo-aviso .btnConfirmar {
+  background-color: red;
+  color: white;
+  padding: 10px 15px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  margin-right: 10px;
+}
+
+.container-campo-aviso .btnCancelar {
+  background-color: gray;
+  color: white;
+  padding: 10px 15px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
 }
