--- a/src/styles/EditarFuncionario.css
+++ b/src/styles/EditarFuncionario.css
@@ -1,31 +1,50 @@
-.container-form-funcionario {
+.container-editar-funcionario {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     background-color: #fff;
     width: 400px;
-    height: calc(100% - 100px);
+    height: calc(100% - 80px);
     border: 1px solid #ccc;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
-.container-form-funcionario h2 {
-    font-size: 18px;
-    font-family: Arial, Helvetica, sans-serif;
-    color: #333;
-    margin-bottom: 15px;
+.container-titulo-funcionario {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 40px;
+    padding: 30px;
+    border-bottom: 1px solid #ccc;
 }
 
-.container .container-form-funcionario .form {
+.container-form-editar h2 {
+    font-size: 18px;
+    font-family: Arial, Helvetica, sans-serif;
+    color: #666;
+}
+
+.container-form-centro {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    gap: 40px;
+}
+
+.form-editar {
     display: flex;
     flex-direction: column;
     width: calc(100% - 80px);
     gap: 15px;
 }
 
-.container .container-form-funcionario .form input {
+.form-editar input {
     width: 100%;
     padding: 10px;
     font-size: 14px;
@@ -33,8 +52,8 @@
     border-radius: 4px;
 }
 
-.container .container-form-funcionario .form .btnCadastrar {
-    width: 100%;
+.btnEditar {
+    width: calc(100% - 80px);
     padding: 10px;
     font-size: 16px;
     color: #fff;
@@ -45,6 +64,6 @@
     transition: 0.3s;
 }
 
-.container .container-form-funcionario .form .btnCadastrar:hover {
+.btnEditar:hover {
     background-color: #218838;
 }
