--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -8,7 +8,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: lightgray;
+  justify-content: center;
+  background-color: #f0f0f0;
   width: 100%;
   height: calc(100vh - 90px);
 }
