Criando os testes

--- a/src/styles/EditarFuncionario.css
+++ b/src/styles/EditarFuncionario.css
@@ -21,8 +21,8 @@
     border-bottom: 1px solid #ccc;
 }
 
-.container-form-editar h2 {
-    font-size: 18px;
+.container-titulo-funcionario h2 {
+    font-size: 20px;
     font-family: Arial, Helvetica, sans-serif;
     color: #666;
 }
